--- a/index.html
+++ b/index.html
@@ -1,4 +1,95 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PYTHIA PROPHECY</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: #0f0f0f;
+      color: #fff;
+    }
+    header {
+      background: #1a1a1a;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      color: #00ffc3;
+    }
+    nav {
+      text-align: center;
+      margin-top: 10px;
+    }
+    nav a {
+      color: #00ffc3;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    .banner {
+      width: 100%;
+      height: 200px;
+      background: url('banner.jpg') center/cover no-repeat;
+    }
+    .section {
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    .card {
+      background: #1f1f1f;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 10px rgba(0, 255, 195, 0.2);
+    }
+    .footer {
+      text-align: center;
+      padding: 10px;
+      background: #1a1a1a;
+      color: #888;
+    }
+    .telegram {
+      display: inline-block;
+      margin: 10px auto;
+      padding: 10px 20px;
+      background: #0088cc;
+      color: #fff;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
+</head><body>
+  <header>
+    <h1>PYTHIA PROPHECY</h1>
+    <nav>
+      <a href="#predictions">Predictions</a>
+      <a href="https://t.me/+luDA02zm1aNiYmU9" target="_blank">Telegram</a>
+    </nav>
+  </header>  <div class="banner"></div>  <section class="section" id="predictions">
+    <h2>Latest Prediction</h2>
+    <div class="card">
+      <h3>✅ Prediction Entry 1</h3>
+      <p><strong>Match:</strong> Sweden (Women) 🆚 England (Women)</p>
+      <p><strong>Date:</strong> 18 July 2025 (01:00 AM)</p>
+      <p><strong>Tip:</strong> <span style="color: #00ffc3">Total Goals – Over 2</span></p>
+      <p><strong>Odds:</strong> 1.44</p>
+      <p><strong>Stake:</strong> €5</p>
+      <p><strong>Potential Win:</strong> €7.2</p>
+      <p><strong>Status:</strong> ✅ Accepted</p>
+    </div>
+  </section>  <section class="section">
+    <h2>Join Us</h2>
+    <a class="telegram" href="https://t.me/+luDA02zm1aNiYmU9" target="_blank">Join Our Telegram</a>
+  </section>  <div class="footer">
+    © 2025 PYTHIA PROPHECY — All rights reserved
+  </div>
+</body></html><!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
